--- a/Pages/quieroserparte.html
+++ b/Pages/quieroserparte.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+    <meta charset="UTF-8">  
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="produccion, shows, eventos, entretenimiento, artistas, protagonistas"> 
     <title>Contratación de artistas en productora</title>
     <meta name="description" content="Die Stern es un productora dedicada a la realización de shows para animar todo tipo de eventos">
-    <meta charset="UTF-8">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Gilda+Display&family=Playfair+Display+SC&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/7ad48722f8.js" crossorigin="anonymous"></script>
