modifiqué estilos para responsive

--- a/Pages/nosotros.html
+++ b/Pages/nosotros.html
@@ -44,27 +44,27 @@
         nos fuimos agrandando e incorporando distintos tipos de shows, así como a diferentes intérpretes. <br>
         Actualmente, contamos con más de 300 artistas dedicados a diversas disciplinas, formados para shows variados, únicos y deslumbrantes. <br>
         Estamos muy orgullosos de estar ya en nuestro 11° aniversario y de poder dedicarnos a lo que realmente nos gusta. <br>
-        ¡Acompañanos en este viaje que se encuentra en constante crecimiento! 
-        </p>
-        <nav class="centrado">
-            <button class="container-nosotros__boton"><a href="#">¡Conocenos más!</a></button>
-        </nav>
+        ¡Acompañanos en este viaje que se encuentra en constante crecimiento! </p>
         </div>
         <div>
             <img class="container-nosotros__imagen" src="../Images/logo.jpeg" alt="">
         </div>
+        
+        <nav class="centrado">
+            <button class="container-nosotros__boton"><a href="#">¡Conocenos más!</a></button>
+        </nav>
         </div>  
     </section>
 
     <!--  Pie de página  -->
-    <footer>
-        <p>Todos los derechos reservados</p>
-        <p>Seguinos en nuestras redes sociales!</p>
+    <footer class="footer">
+        <p class="footer__derechos"><i class="far fa-copyright"></i>2021 - Página creada por Micaela Casebonne</p>
+        <p class="footer__redes">Seguinos en nuestras redes sociales!</p>
             <div class="redes-sociales">
                 <ul>
-                  <li><i class="fab fa-twitter"></i>Twitter</li>
-                  <li><i class="fab fa-instagram"></i>Instagram</li>
-                  <li><i class="fab fa-facebook"></i>Facebook</li>
+                    <li><i class="fab fa-twitter"></i></li>
+                    <li><i class="fab fa-instagram"></i></li>
+                    <li><i class="fab fa-facebook"></i></li>
                 </ul>
             </div>
             <div class="menu-footer">
