--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   </header>
 
     <!--  Inicio contenido principal  -->
-    <section>
+    <section class="carousel">
       <div id="carouselExampleCaptions" class="carousel slide carousel-fade" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
@@ -97,14 +97,14 @@
     </section>
   </div>
     <!--  Pie de página  -->
-    <footer>
-    <p>Todos los derechos reservados</p>
-    <p>Seguinos en nuestras redes sociales</p>
+    <footer class="footer">
+    <p class="footer__derechos"><i class="far fa-copyright"></i>2021 - Página creada por Micaela Casebonne</p>
+    <p class="footer__redes">Seguinos en nuestras redes sociales!</p>
         <div class="redes-sociales">
             <ul>
-                <li><i class="fab fa-twitter"></i>Twitter</li>
-                <li><i class="fab fa-instagram"></i>Instagram</li>
-                <li><i class="fab fa-facebook"></i>Facebook</li>
+                <li><i class="fab fa-twitter"></i></li>
+                <li><i class="fab fa-instagram"></i></li>
+                <li><i class="fab fa-facebook"></i></li>
             </ul>
         </div>
         <div class="menu-footer">
