--- a/Pages/contactoypresupuesto.html
+++ b/Pages/contactoypresupuesto.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Gilda+Display&family=Playfair+Display+SC&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/7ad48722f8.js" crossorigin="anonymous"></script>
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" re="stylesheet">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/estilos.css">
 </head>
 
@@ -117,17 +117,17 @@
     </section>
 
     <!--  Pie de página  -->    
-    <footer>
-      <p>Todos los derechos reservados</p>
-      <p>Seguinos en nuestras redes sociales!</p>
-        <div class="redes-sociales">
-          <ul>
-            <li><i class="fab fa-twitter"></i>Twitter</li>
-            <li><i class="fab fa-instagram"></i>Instagram</li>
-            <li><i class="fab fa-facebook"></i>Facebook</li>                
-          </ul>
-        </div>
-        <div class="menu-footer">
+    <footer class="footer">
+      <p class="footer__derechos"><i class="far fa-copyright"></i>2021 - Página creada por Micaela Casebonne</p>
+      <p class="footer__redes">Seguinos en nuestras redes sociales!</p>
+          <div class="redes-sociales">
+              <ul>
+                  <li><i class="fab fa-twitter"></i></li>
+                  <li><i class="fab fa-instagram"></i></li>
+                  <li><i class="fab fa-facebook"></i></li>
+              </ul>
+          </div>
+          <div class="menu-footer">
           <ul>
             <li> <a href="../index.html">Home</a> </li>
             <li> <a href="../Pages/nosotros.html">Nosotros</a> </li>
