--- a/Pages/quieroserparte.html
+++ b/Pages/quieroserparte.html
@@ -87,14 +87,14 @@
   </section>
 
     <!--  Pie de página  -->    
-    <footer>
-      <p>Todos los derechos reservados</p>
-      <p>Seguinos en nuestras redes sociales!</p>
+    <footer class="footer">
+      <p class="footer__derechos"><i class="far fa-copyright"></i>2021 - Página creada por Micaela Casebonne</p>
+      <p class="footer__redes">Seguinos en nuestras redes sociales!</p>
         <div class="redes-sociales">
           <ul>
-            <li><i class="fab fa-twitter"></i>Twitter</li>
-            <li><i class="fab fa-instagram"></i>Instagram</li>
-            <li><i class="fab fa-facebook"></i>Facebook</li>                
+            <li><i class="fab fa-twitter"></i></li>
+            <li><i class="fab fa-instagram"></i></li>
+            <li><i class="fab fa-facebook"></i></li>
           </ul>
         </div>
         <div class="menu-footer">
