--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <meta name="description" content="Este es el sitio oficial de Die Stern, donde vas a poder contratar los mejores shows para hacer que tu evento sea único.">  
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Gilda+Display&family=Playfair+Display+SC&display=swap" rel="stylesheet">
+    <!--
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    -->
     <script src="https://kit.fontawesome.com/7ad48722f8.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/estilos.css">  
   </head>
@@ -71,16 +73,16 @@
         </div>
         </div>
         <div data-aos="fade-right" data-aos-delay="200" data-aos-easing="ease-in-sine">
-            <nav class="centrado">
+            <div class="centrado">
                 <button class="seccion-dos__boton"><a href="pages/shows.html">Ver shows</a></button>  
-            </nav>
+            </div>
           </div>   
         </div>
     </section>
 
   <div data-aos="fade-left" data-aos-delay="400" data-aos-easing="ease-in-sine">
     <section class="seccion-tres">
-        <h2>Desde <br><p class="span-index">2010</p>llevando alegría a tus eventos</h2>
+        <h2>Desde <br><br><span class="seccion-tres__span">2010</span><br><br>llevando alegría a tus eventos</h2>
         <nav class="seccion-tres__centrado">
             <iframe src="https://player.vimeo.com/video/237799984" width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
         </nav>
@@ -89,9 +91,9 @@
 
   <div data-aos="fade-up" data-aos-delay="200" data-aos-easing="ease-in-sine">
    <section class="seccion-cuatro"> 
-        <h3 class="texto-final-index">¿Querés saber más sobre nosotros o solicitar tu presupuesto? <br>
+        <h3>¿Querés saber más sobre nosotros o solicitar tu presupuesto? <br>
         No dudes en <a href="Pages/contactoypresupuesto.html#formularioClientes">contactarnos</a>!</h3> 
-        <br><br><br>
+        <br><br>
         <h3>¿Sos artista de cualquier índole y te interesa sumarte a nuestras propuestas? <br>
         <a href="Pages/quieroserparte.html#formularioArtistas">¡Quiero ser parte!</a></h2>
     </section>
