--- a/index.html
+++ b/index.html
@@ -9,9 +9,6 @@
     <meta name="description" content="Este es el sitio oficial de Die Stern, donde vas a poder contratar los mejores shows para hacer que tu evento sea único.">  
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Gilda+Display&family=Playfair+Display+SC&display=swap" rel="stylesheet">
-    <!--
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    -->
     <script src="https://kit.fontawesome.com/7ad48722f8.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/estilos.css">  
   </head>
@@ -59,37 +56,27 @@
       </div>
     </section>
 
-    <div data-aos="fade-right" data-aos-delay="200" data-aos-easing="ease-in-sine">
     <section class="seccion-dos">
         <h2>Lo que ofrecemos</h2>
         <p class="seccion-dos__subtitulo">Brindamos shows para todos los gustos, para toda clase de eventos y para todo tipo de público.
         <br> Más de 10 años avalan nuestra experiencia en el rubro.</p>
-        </div>
-      <div data-aos="flip-left" data-aos-delay="400" data-aos-easing="ease-out-cubic">
         <div class="container-grid">
         <img class="container-grid__img1" src="Images/luzindex.jpg" alt="malabares" title="Malabares con luces">
         <img class="container-grid__img2" src="Images/acropisoindex.jpg" alt="acrobacias" title="Show de acrobacias entre dos personas">
         <img class="container-grid__img3" src="Images/acropiso2index.jpg" alt="acrobacia" title="Una artista haciendo contorsionismo">
         </div>
-        </div>
-        <div data-aos="fade-right" data-aos-delay="200" data-aos-easing="ease-in-sine">
             <div class="centrado">
-                <button class="seccion-dos__boton"><a href="pages/shows.html">Ver shows</a></button>  
-            </div>
-          </div>   
-        </div>
+                <button class="seccion-dos__boton"><a href="Pages/shows.html">Ver shows</a></button>  
+            </div>   
     </section>
 
-  <div data-aos="fade-left" data-aos-delay="400" data-aos-easing="ease-in-sine">
     <section class="seccion-tres">
         <h2>Desde <br><br><span class="seccion-tres__span">2010</span><br><br>llevando alegría a tus eventos</h2>
         <nav class="seccion-tres__centrado">
             <iframe src="https://player.vimeo.com/video/237799984" width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
         </nav>
     </section>
-  </div>
 
-  <div data-aos="fade-up" data-aos-delay="200" data-aos-easing="ease-in-sine">
    <section class="seccion-cuatro"> 
         <h3>¿Querés saber más sobre nosotros o solicitar tu presupuesto? <br>
         No dudes en <a href="Pages/contactoypresupuesto.html#formularioClientes">contactarnos</a>!</h3> 
@@ -97,7 +84,7 @@
         <h3>¿Sos artista de cualquier índole y te interesa sumarte a nuestras propuestas? <br>
         <a href="Pages/quieroserparte.html#formularioArtistas">¡Quiero ser parte!</a></h2>
     </section>
-  </div>
+
     <!--  Pie de página  -->
     <footer class="footer">
     <p class="footer__derechos"><i class="far fa-copyright"></i>2021 - Página creada por Micaela Casebonne</p>
@@ -120,11 +107,5 @@
         </div>
     </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script>
-      AOS.init();
-    </script>
   </body>
 </html>
