--- a/Pages/shows.html
+++ b/Pages/shows.html
@@ -37,30 +37,28 @@
 
     <section>
     <!--  Inicio contenido principal  -->    
-        <h1 class="shows-texto">Nuestros shows</h1>
-        <h2 class="shows-texto__subtitulo">Para todo tipo de eventos</h2>
-            <div class="navbar-shows">
-            <nav>   
-                <ul> 
-                    <li class="animate__animated animate__fadeInLeftBig"> <a class="animate__animated animate__fadeInLeftBig" href="#artistasaereos">Artistas aéreos</a></li>
-                    <li class="animate__animated animate__fadeInRightBig"> <a href="#artistasdepiso">Artistas de piso</a></li>
-                    <li class="animate__animated animate__fadeInLeftBig"> <a class="animate__animated animate__fadeInLeftBig" href="#bailarinesybailarinas">Bailarines y Bailarinas</a></li>
-                    <li class="animate__animated animate__fadeInRightBig"> <a href="#bandasdemusica">Bandas de música</a></li>
-                    <li class="animate__animated animate__fadeInLeftBig"> <a class="animate__animated animate__fadeInLeftBig" href="#magiaeilusionismo">Magia e Ilusionismo</a></li>
-                    <li class="animate__animated animate__fadeInRightBig"> <a href="#showdefuego">Show de fuego</a></li>
-                    <li class="animate__animated animate__fadeInLeftBig"> <a href="#showdehumor">Show de humor</a></li>
-                    <li class="animate__animated animate__fadeInRightBig"> <a href="#showdeluces">Show de luces</a></li>
-                </ul>
-            </nav>
-            </div>
+      <h1 class="shows-texto">Nuestros shows</h1>
+      <h2 class="shows-texto__subtitulo">Para todo tipo de eventos</h2>
+        <div class="navbar-shows">
+          <ul> 
+            <li class="animate__animated animate__fadeInLeftBig"> <a class="animate__animated animate__fadeInLeftBig" href="#artistasaereos">Artistas aéreos</a></li>
+            <li class="animate__animated animate__fadeInRightBig"> <a href="#artistasdepiso">Artistas de piso</a></li>
+            <li class="animate__animated animate__fadeInLeftBig"> <a class="animate__animated animate__fadeInLeftBig" href="#bailarinesybailarinas">Bailarines y Bailarinas</a></li>
+            <li class="animate__animated animate__fadeInRightBig"> <a href="#bandasdemusica">Bandas de música</a></li>
+            <li class="animate__animated animate__fadeInLeftBig"> <a class="animate__animated animate__fadeInLeftBig" href="#magiaeilusionismo">Magia e Ilusionismo</a></li>
+            <li class="animate__animated animate__fadeInRightBig"> <a href="#showdefuego">Show de fuego</a></li>
+            <li class="animate__animated animate__fadeInLeftBig"> <a href="#showdehumor">Show de humor</a></li>
+            <li class="animate__animated animate__fadeInRightBig"> <a href="#showdeluces">Show de luces</a></li>
+          </ul>
+        </div>
     </section>
 
     <section>
       <div class="container-grid-shows">
         <div class="texto-img-shows" data-aos="fade-up" data-aos-delay="200" data-aos-easing="ease-in-sine">
-        <p id="artistasaereos"><span class="titulo-shows">Artistas aéreos</span><br><br>Acróbatas de diversas disciplinas 
-        aéreas, tales como trapecio, tela, aro, anillas, palo chino; dispuestos a hacer de tu evento algo fascinante e inolvidable.
-        ¡Contamos con estructuras tanto para interiores como para exteriores!
+        <p class="titulo-shows">Artistas aéreos</p>
+        <p id="artistasaereos">Acróbatas de diversas disciplinas aéreas, tales como trapecio, tela, aro, anillas, palo chino; dispuestos a hacer de tu evento algo fascinante e inolvidable.
+        ¡Contamos con estructuras tanto para interiores como para exteriores!</p>
         </div>
         <div data-aos="fade-down" data-aos-delay="200" data-aos-easing="ease-in-sine">
         <img class="img-shows" src="../Images/showacroaereo.jpg" alt="acrobacia de aire" title="Show de acrobacias aéreas en boliche">
@@ -70,14 +68,15 @@
         <img class="img-shows" src="../Images/acrobaciashows.jpg" alt="acrobacia de piso" title="Show de acrobacia de piso en salón">
         </div>
         <div class="texto-img-shows" data-aos="fade-up" data-aos-delay="600" data-aos-easing="ease-in-sine">
-        <p id="artistasdepiso"><span class="titulo-shows">Artistas de piso</span><br><br>Acróbatas de piso preparados para deleitarte
-        con sus magníficas proezas. Contamos con artistas especializados en acrobacias individuales, de dúo, contorsionistas, hulistas 
+        <p class="titulo-shows">Artistas de piso</p>
+        <p id="artistasdepiso">Acróbatas de piso preparados para deleitarte con sus magníficas proezas. Contamos con artistas especializados en acrobacias individuales, de dúo, contorsionistas, hulistas 
         y malabaristas, para que elijas lo que mejor se adapta a tu evento y tus preferencias.</p>
         </div>
 
         <div class="texto-img-shows" data-aos="fade-up" data-aos-delay="600" data-aos-easing="ease-in-sine">
-        <p id="bailarinesybailarinas"><span class="titulo-shows">Bailarines y Bailarinas</span><br><br>Show de danza de diferentes ritmos como rock, hip hop,
-        pop, jazz, clásico, reggaeton, cumbia, entre otros. Coreografías armadas para cada ocasión.</p>
+        <p class="titulo-shows">Bailarines y Bailarinas</p>
+        <p id="bailarinesybailarinas">Show de danza de diferentes ritmos como rock, hip hop, pop, jazz, clásico, 
+        reggaeton, cumbia, entre otros. Coreografías armadas para cada ocasión.</p>
         </div>
         <div data-aos="fade-down" data-aos-delay="400" data-aos-easing="ease-in-sine">
         <img class="img-shows" src="../Images/bailarin.jpg" alt="bailarines" title="Show de bailarines y bailarinas">
@@ -87,11 +86,14 @@
         <img class="img-shows" src="../Images/banda.jpg" alt="bandademusica" title="Show con banda de música">
         </div>
         <div class="texto-img-shows" data-aos="fade-up" data-aos-delay="600" data-aos-easing="ease-in-sine">
-        <p id="bandasdemusica"><span class="titulo-shows">Bandas de música</span> <br><br>Contamos con bandas especializadas en diferentes
-        géneros musicales y que tocan tanto temas propios, como covers de los temas más conocidos. ¡Todo adaptado a gusto del cliente!</div>
+        <p class="titulo-shows">Bandas de música</p> 
+        <p id="bandasdemusica"> Contamos con bandas especializadas en diferentes géneros musicales y que tocan 
+        tanto temas propios, como covers de los temas más conocidos. ¡Todo adaptado a gusto del cliente!</p>
+        </div>
 
         <div class="texto-img-shows" data-aos="fade-up" data-aos-delay="600" data-aos-easing="ease-in-sine">
-        <p id="magiaeilusionismo"><span class="titulo-shows">Magia e ilusionismo</span> <br><br>¿Buscas algo diferente para sorprender a los
+        <p class="titulo-shows">Magia e ilusionismo</p>
+        <p id="magiaeilusionismo">¿Buscas algo diferente para sorprender a los
         asistentes del evento? ¡Este show es para vos! Trabajamos junto a los mejores artistas para que realmente tu velada sea mágica y memorable.
         Ideal, además, para quienes quieran hacer a sus invitados, partícipes del show.</p>
         </div>
@@ -103,12 +105,15 @@
         <img class="img-shows" src="../Images/showdefuego.jpg" alt="fuego" title="Show de fuego al aire libre">
         </div>
         <div class="texto-img-shows" data-aos="fade-up" data-aos-delay="600" data-aos-easing="ease-in-sine">
-        <p id="showdefuego"><span class="titulo-shows">Show de fuego</span> <br><br>Porque no nos conformamos con los shows tradicionales, 
+        <p class="titulo-shows">Show de fuego</p>
+        <p id="showdefuego">Porque no nos conformamos con los shows tradicionales, 
         ofrecemos esta alternativa apta para aquellos a los que les gusta el riesgo, y disfrutan de salir de lo convencional.
-        ¡Nuestro show de fuego promete ser algo con lo que sentirse maravillado!</div>
+        ¡Nuestro show de fuego promete ser algo con lo que sentirse maravillado!</p>
+        </div>
 
         <div class="texto-img-shows" data-aos="fade-up" data-aos-delay="600" data-aos-easing="ease-in-sine">
-        <p id="showdehumor"><span class="titulo-shows">Show de humor</span> <br><br>Extremadamente versátil, nuestro show de humor es el
+        <p class="titulo-shows">Show de humor</p>
+        <p id="showdehumor">Extremadamente versátil, nuestro show de humor es el
         que más fácilmente se adapta a todo tipo de eventos. ¡Grandes carcajadas garantizadas!</p>
         </div>
         <div data-aos="fade-down" data-aos-delay="400" data-aos-easing="ease-in-sine">
@@ -119,26 +124,25 @@
         <img class="img-shows" src="../Images/showluces1.jpg" alt="luces" title="Show de luces en interior">
         </div>
         <div class="texto-img-shows" data-aos="fade-up" data-aos-delay="600" data-aos-easing="ease-in-sine">
-        <p id="showdeluces"><span class="titulo-shows">Show de luces</span> <br><br>Contamos con dispositivos de última tecnología, 
-        para brindar el mejor show de luces de la ciudad. Además, contamos con artistas que utilizan elementos con luces led incorporadas,
-        cuyo objetivo es crear patrones que dejen boquiabierto a quien los mire. ¡Todo al ritmo de la música!
-        </p>
+        <p class="titulo-shows">Show de luces</p>
+        <p id="showdeluces">Contamos con dispositivos de última tecnología, para brindar el mejor show de luces. Además, nuestros artistas utilizan elementos con luces led incorporadas,
+        cuyo objetivo es crear patrones que dejen boquiabierto a quien los mire. ¡Y todo al ritmo de la música!</p>
         </div>    
-        </div>
+      </div>
     </section>
 
     <!--  Pie de página  -->    
     <footer class="footer">
       <p class="footer__derechos"><i class="far fa-copyright"></i>2021 - Página creada por Micaela Casebonne</p>
       <p class="footer__redes">Seguinos en nuestras redes sociales!</p>
-          <div class="redes-sociales">
-              <ul>
-                  <li><i class="fab fa-twitter"></i></li>
-                  <li><i class="fab fa-instagram"></i></li>
-                  <li><i class="fab fa-facebook"></i></li>
-              </ul>
-          </div>
-      <div class="menu-footer">
+        <div class="redes-sociales">
+          <ul>
+            <li><i class="fab fa-twitter"></i></li>
+            <li><i class="fab fa-instagram"></i></li>
+            <li><i class="fab fa-facebook"></i></li>
+          </ul>
+        </div>
+        <div class="menu-footer">
           <ul>
             <li> <a href="../index.html">Home</a> </li>
             <li> <a href="../Pages/nosotros.html">Nosotros</a> </li>
