--- a/Pages/nosotros.html
+++ b/Pages/nosotros.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="produccion, shows, eventos, fiestas, cumpleaños, entretenimiento, nosotros, productora"> 
-    <title>Más sobre nuestra productora de eventos</title>
+    <title>Más información sobre la productora de eventos</title>
     <meta name="description" content="Die Stern es un productora dedicada a la realización de shows para animar todo tipo de eventos">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Gilda+Display&family=Playfair+Display+SC&display=swap" rel="stylesheet">
