modificación para responsive

--- a/Pages/contactoypresupuesto.html
+++ b/Pages/contactoypresupuesto.html
@@ -43,12 +43,12 @@
             <fieldset>
                 <legend>Formulario para clientes</legend>
                     <label for="Name">Nombre:</label>
-                    <input class="combo-box" type="text" name="nombre" placeholder="Ej:Lucas">
+                    <input type="text" name="nombre" placeholder="Ej:Lucas">
                     <br>
                     <label for="Apellido">Apellido:</label>
                     <input type="text" name="Apellido" placeholder="Ej:Ramírez">
                     <br>
-                    <label for="mail">Email:</label>
+                    <label for="mail">E-mail:</label>
                     <input type="email" name="mail" placeholder="Ej:quierounshow@hotmail.com">
                     <br>
                     <label for="Telefono">Teléfono:</label>
@@ -85,16 +85,11 @@
                 <p>Tipo de público:</p>
                     <input type="radio" name="publico" value="Infantil">
                     <label for="infantil">Infantil</label>
-                    <br>
                     <input type="radio" name="publico" value="Familiar">
                     <label for="familiar">Familiar</label>
-                    <br>    
                     <input type="radio" name="publico" value="Adulto">
                     <label for="adulto">Adulto</label>
-                    <br><br>
-                    <label for="info">Deseo suscribirme al Newsletter para obtener descuentos y promociones</label>
-                    <input type="checkbox" name="Acepta" value="1">
-                    <br><br>
+                    <br>
                     <label for="InformacionExtra">Información Extra:</label>
                     <br>
                     <br>
@@ -109,7 +104,6 @@
     </section>
   </div>
 
-    <!--
     <section class="segunda-seccion">
         <h2 class="subtitulo-contacto">También podés consultar nuestras fechas disponibles</h2>
         <nav class="segunda-seccion__centrado">
@@ -118,7 +112,7 @@
         <br>
         <br>
     </section>
--->
+    
     <!--  Pie de página  -->    
     <footer class="footer">
       <p class="footer__derechos"><i class="far fa-copyright"></i>2021 - Página creada por Micaela Casebonne</p>
