--- a/Pages/shows.html
+++ b/Pages/shows.html
@@ -1,135 +1,151 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">  
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="shows, eventos, fiestas, cumpleaños, entretenimiento, acrobacias, fuego, malabares, luces, magia,
+  <meta charset="UTF-8">  
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="keywords" content="shows, eventos, fiestas, cumpleaños, entretenimiento, acrobacias, fuego, malabares, luces, magia,
     bailarines, música, bandas, artistas, emoción, alegría, felicidad">  
-    <title>Shows para toda clase de eventos</title>
-    <meta name="description" content="Die Stern es un productora dedicada a la realización de shows para animar todo tipo de eventos">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Gilda+Display&family=Playfair+Display+SC&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/7ad48722f8.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
-    <link rel="stylesheet" href="css/animate.css">
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link rel="stylesheet" href="../css/estilos.css">
-  </head>
+  <title>Shows para toda clase de eventos</title>
+  <meta name="description" content="Die Stern es un productora dedicada a la realización de shows para animar todo tipo de eventos">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Gilda+Display&family=Playfair+Display+SC&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/7ad48722f8.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+  <link rel="stylesheet" href="css/animate.css">
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <link rel="stylesheet" href="../css/estilos.css">
+</head>
 
 <body>
-    <!--  Inicio encabezado  -->        
-    <header class="header-sitio">
-      <div class="container header-container">
-        <a href="../index.html"><img class="logo" src="../Images/logo.jpg" alt="logo"></a>
-        <a href="../index.html"><h1>Die Stern Producciones</h1></a>
-        <a href="#nav" class="menu-abrir"><i class="fas fa-bars"></i></a>
-        <nav id="nav">
-            <a class="nav-link" href="../index.html">Home</a>
-            <a class="nav-link" href="../Pages/nosotros.html">Nosotros</a>
-            <a class="nav-link active" href="../Pages/shows.html">Shows</a>
-            <a class= "nav-link" href="../Pages/contactoypresupuesto.html">Contacto y presupuesto</a>
-            <a class= "nav-link" href="../Pages/quieroserparte.html">Quiero ser parte</a>
-            <a href="#" class="menu-cerrar"><i class="fas fa-times"></i></a>
-        </nav>
-      </div>
+  <!--  Inicio encabezado  -->        
+  <header class="header-sitio">
+    <div class="container header-container">
+      <a href="../index.html"><img class="logo" src="../Images/logo.jpg" alt="logo"></a>
+      <a href="../index.html"><h1>Die Stern Producciones</h1></a>
+      <a href="#nav" class="menu-abrir"><i class="fas fa-bars"></i></a>
+      <nav id="nav">
+        <a class="nav-link" href="../index.html">Home</a>
+        <a class="nav-link" href="../Pages/nosotros.html">Nosotros</a>
+        <a class="nav-link active" href="../Pages/shows.html">Shows</a>
+        <a class= "nav-link" href="../Pages/contactoypresupuesto.html">Contacto y presupuesto</a>
+        <a class= "nav-link" href="../Pages/quieroserparte.html">Quiero ser parte</a>
+        <a href="#" class="menu-cerrar"><i class="fas fa-times"></i></a>
+      </nav>
+    </div>
   </header>
 
-    <section>
-    <!--  Inicio contenido principal  -->    
-      <h1 class="shows-texto">Nuestros shows</h1>
-      <h2 class="shows-texto__subtitulo">Para todo tipo de eventos</h2>
-        <div class="navbar-shows">
-          <ul> 
-            <li class="animate__animated animate__fadeInLeftBig"> <a class="animate__animated animate__fadeInLeftBig" href="#artistasaereos">Artistas aéreos</a></li>
-            <li class="animate__animated animate__fadeInRightBig"> <a href="#artistasdepiso">Artistas de piso</a></li>
-            <li class="animate__animated animate__fadeInLeftBig"> <a class="animate__animated animate__fadeInLeftBig" href="#bailarinesybailarinas">Bailarines y Bailarinas</a></li>
-            <li class="animate__animated animate__fadeInRightBig"> <a href="#bandasdemusica">Bandas de música</a></li>
-            <li class="animate__animated animate__fadeInLeftBig"> <a class="animate__animated animate__fadeInLeftBig" href="#magiaeilusionismo">Magia e Ilusionismo</a></li>
-            <li class="animate__animated animate__fadeInRightBig"> <a href="#showdefuego">Show de fuego</a></li>
-            <li class="animate__animated animate__fadeInLeftBig"> <a href="#showdehumor">Show de humor</a></li>
-            <li class="animate__animated animate__fadeInRightBig"> <a href="#showdeluces">Show de luces</a></li>
-          </ul>
-        </div>
-    </section>
+  <section>
+  <!--  Inicio contenido principal  -->    
+    <h1 class="titulo-pag-shows">Nuestros shows</h1>
+    <h2 class="subtitulo-pag-shows">Para todo tipo de eventos</h2>
+      <div class="navbar-shows">
+        <ul> 
+          <li class="animate__animated animate__fadeInLeftBig"> <a class="animate__animated animate__fadeInLeftBig" href="#artistasaereos">Artistas aéreos</a></li>
+          <li class="animate__animated animate__fadeInRightBig"> <a href="#artistasdepiso">Artistas de piso</a></li>
+          <li class="animate__animated animate__fadeInLeftBig"> <a class="animate__animated animate__fadeInLeftBig" href="#bailarinesybailarinas">Bailarines y Bailarinas</a></li>
+          <li class="animate__animated animate__fadeInRightBig"> <a href="#bandasdemusica">Bandas de música</a></li>
+          <li class="animate__animated animate__fadeInLeftBig"> <a class="animate__animated animate__fadeInLeftBig" href="#magiaeilusionismo">Magia e Ilusionismo</a></li>
+          <li class="animate__animated animate__fadeInRightBig"> <a href="#showdefuego">Show de fuego</a></li>
+          <li class="animate__animated animate__fadeInLeftBig"> <a href="#showdehumor">Show de humor</a></li>
+          <li class="animate__animated animate__fadeInRightBig"> <a href="#showdeluces">Show de luces</a></li>
+        </ul>
+      </div>
+  </section>
 
-    <section>
-      <div class="container-grid-shows">
-        <div class="texto-img-shows" data-aos="fade-up" data-aos-delay="200" data-aos-easing="ease-in-sine">
-        <p class="titulo-shows">Artistas aéreos</p>
-        <p id="artistasaereos">Acróbatas de diversas disciplinas aéreas, tales como trapecio, tela, aro, anillas, palo chino; dispuestos a hacer de tu evento algo fascinante e inolvidable.
-        ¡Contamos con estructuras tanto para interiores como para exteriores!</p>
-        </div>
+  <section>
+    <div class="container-shows">
+      <div id="artistasaereos">
+        <div class="container-shows__texto" data-aos="fade-up" data-aos-delay="200" data-aos-easing="ease-in-sine">
+          <p class="titulo-shows">Artistas aéreos</p>
+          <p class="texto-shows">Acróbatas de diversas disciplinas aéreas, tales como trapecio, tela, aro, anillas, palo chino; dispuestos a hacer de tu evento algo fascinante e inolvidable.
+          ¡Contamos con estructuras tanto para interiores como para exteriores!</p>
+          </div>
+      </div>
         <div data-aos="fade-down" data-aos-delay="200" data-aos-easing="ease-in-sine">
         <img class="img-shows" src="../Images/showacroaereo.jpg" alt="acrobacia de aire" title="Show de acrobacias aéreas en boliche">
         </div>
-
+      
         <div data-aos="fade-down" data-aos-delay="400" data-aos-easing="ease-in-sine">
         <img class="img-shows" src="../Images/acrobaciashows.jpg" alt="acrobacia de piso" title="Show de acrobacia de piso en salón">
         </div>
-        <div class="texto-img-shows" data-aos="fade-up" data-aos-delay="600" data-aos-easing="ease-in-sine">
-        <p class="titulo-shows">Artistas de piso</p>
-        <p id="artistasdepiso">Acróbatas de piso preparados para deleitarte con sus magníficas proezas. Contamos con artistas especializados en acrobacias individuales, de dúo, contorsionistas, hulistas 
-        y malabaristas, para que elijas lo que mejor se adapta a tu evento y tus preferencias.</p>
+        <div id="artistasdepiso">
+          <div data-aos="fade-up" data-aos-delay="600" data-aos-easing="ease-in-sine">
+          <p class="titulo-shows">Artistas de piso</p>
+          <p class="texto-shows">Acróbatas de piso preparados para deleitarte con sus magníficas proezas. Contamos con artistas especializados en acrobacias individuales, de dúo, contorsionistas, hulistas 
+          y malabaristas, para que elijas lo que mejor se adapta a tu evento y tus preferencias.</p>
+          </div>
         </div>
 
-        <div class="texto-img-shows" data-aos="fade-up" data-aos-delay="600" data-aos-easing="ease-in-sine">
+      <div id="bailarinesybailarinas">
+        <div data-aos="fade-up" data-aos-delay="600" data-aos-easing="ease-in-sine">
         <p class="titulo-shows">Bailarines y Bailarinas</p>
-        <p id="bailarinesybailarinas">Show de danza de diferentes ritmos como rock, hip hop, pop, jazz, clásico, 
+        <p class="texto-shows">Show de danza de diferentes ritmos como rock, hip hop, pop, jazz, clásico, 
         reggaeton, cumbia, entre otros. Coreografías armadas para cada ocasión.</p>
         </div>
+      </div>  
+          <div data-aos="fade-down" data-aos-delay="400" data-aos-easing="ease-in-sine">
+          <img class="img-shows" src="../Images/bailarin.jpg" alt="bailarines" title="Show de bailarines y bailarinas">
+          </div>
+  
         <div data-aos="fade-down" data-aos-delay="400" data-aos-easing="ease-in-sine">
-        <img class="img-shows" src="../Images/bailarin.jpg" alt="bailarines" title="Show de bailarines y bailarinas">
+        <img class="img-shows" src="../Images/banda.jpg" alt="banda de musica" title="Show con banda de música">
+        </div>
+        <div id="bandasdemusica">
+          <div data-aos="fade-up" data-aos-delay="600" data-aos-easing="ease-in-sine">
+          <p class="titulo-shows">Bandas de música</p> 
+          <p class="texto-shows"> Contamos con bandas especializadas en diferentes géneros musicales y que tocan 
+          tanto temas propios, como covers de los temas más conocidos. ¡Todo adaptado a gusto del cliente!</p>
+          </div>
         </div>
 
-        <div data-aos="fade-down" data-aos-delay="400" data-aos-easing="ease-in-sine">
-        <img class="img-shows" src="../Images/banda.jpg" alt="bandademusica" title="Show con banda de música">
-        </div>
-        <div class="texto-img-shows" data-aos="fade-up" data-aos-delay="600" data-aos-easing="ease-in-sine">
-        <p class="titulo-shows">Bandas de música</p> 
-        <p id="bandasdemusica"> Contamos con bandas especializadas en diferentes géneros musicales y que tocan 
-        tanto temas propios, como covers de los temas más conocidos. ¡Todo adaptado a gusto del cliente!</p>
-        </div>
-
-        <div class="texto-img-shows" data-aos="fade-up" data-aos-delay="600" data-aos-easing="ease-in-sine">
+      <div id="magiaeilusionismo">
+        <div data-aos="fade-up" data-aos-delay="600" data-aos-easing="ease-in-sine">
         <p class="titulo-shows">Magia e ilusionismo</p>
-        <p id="magiaeilusionismo">¿Buscas algo diferente para sorprender a los
+        <p class="texto-shows">¿Buscas algo diferente para sorprender a los
         asistentes del evento? ¡Este show es para vos! Trabajamos junto a los mejores artistas para que realmente tu velada sea mágica y memorable.
         Ideal, además, para quienes quieran hacer a sus invitados, partícipes del show.</p>
         </div>
-        <div data-aos="fade-down" data-aos-delay="400" data-aos-easing="ease-in-sine">
-        <img class="img-shows" src="../Images/magia.jpg" alt="magia" title="Show de magia con público infantil">
-        </div>
+      </div>  
+          <div data-aos="fade-down" data-aos-delay="400" data-aos-easing="ease-in-sine">
+          <img class="img-shows" src="../Images/magia.jpg" alt="magia" title="Show de magia con público infantil">
+          </div>
 
         <div data-aos="fade-down" data-aos-delay="400" data-aos-easing="ease-in-sine">
         <img class="img-shows" src="../Images/showdefuego.jpg" alt="fuego" title="Show de fuego al aire libre">
         </div>
-        <div class="texto-img-shows" data-aos="fade-up" data-aos-delay="600" data-aos-easing="ease-in-sine">
-        <p class="titulo-shows">Show de fuego</p>
-        <p id="showdefuego">Porque no nos conformamos con los shows tradicionales, 
-        ofrecemos esta alternativa apta para aquellos a los que les gusta el riesgo, y disfrutan de salir de lo convencional.
-        ¡Nuestro show de fuego promete ser algo con lo que sentirse maravillado!</p>
+        <div id="showdefuego">
+          <div data-aos="fade-up" data-aos-delay="600" data-aos-easing="ease-in-sine">
+          <p class="titulo-shows">Show de fuego</p>
+          <p class="texto-shows">Porque no nos conformamos con los shows tradicionales, 
+          ofrecemos esta alternativa apta para aquellos a los que les gusta el riesgo, y disfrutan de salir de lo convencional.
+          ¡Nuestro show de fuego promete ser algo con lo que sentirse maravillado!</p>
+          </div>
         </div>
 
-        <div class="texto-img-shows" data-aos="fade-up" data-aos-delay="600" data-aos-easing="ease-in-sine">
+      <div id="showdehumor">
+        <div data-aos="fade-up" data-aos-delay="600" data-aos-easing="ease-in-sine">
         <p class="titulo-shows">Show de humor</p>
-        <p id="showdehumor">Extremadamente versátil, nuestro show de humor es el
+        <p class="texto-shows">Extremadamente versátil, nuestro show de humor es el
         que más fácilmente se adapta a todo tipo de eventos. ¡Grandes carcajadas garantizadas!</p>
         </div>
-        <div data-aos="fade-down" data-aos-delay="400" data-aos-easing="ease-in-sine">
-        <img class="img-shows" src="../Images/showhumor.jpg" alt="humor" title="Show de humor y comedia en un bar">
-        </div>
+      </div>
+          <div data-aos="fade-down" data-aos-delay="400" data-aos-easing="ease-in-sine">
+          <img class="img-shows" src="../Images/showhumor.jpg" alt="humor" title="Show de humor y comedia en un bar">
+          </div>
 
         <div data-aos="fade-down" data-aos-delay="400" data-aos-easing="ease-in-sine">
         <img class="img-shows" src="../Images/showluces1.jpg" alt="luces" title="Show de luces en interior">
         </div>
-        <div class="texto-img-shows" data-aos="fade-up" data-aos-delay="600" data-aos-easing="ease-in-sine">
-        <p class="titulo-shows">Show de luces</p>
-        <p id="showdeluces">Contamos con dispositivos de última tecnología, para brindar el mejor show de luces. Además, nuestros artistas utilizan elementos con luces led incorporadas,
-        cuyo objetivo es crear patrones que dejen boquiabierto a quien los mire. ¡Y todo al ritmo de la música!</p>
-        </div>    
-      </div>
-    </section>
+        <div id="showdeluces">
+          <div data-aos="fade-up" data-aos-delay="600" data-aos-easing="ease-in-sine">
+          <p class="titulo-shows">Show de luces</p>
+          <p class="texto-shows">Contamos con dispositivos de última tecnología, para brindar el mejor show de luces. Además, nuestros artistas utilizan elementos con luces led incorporadas,
+          cuyo objetivo es crear patrones que dejen boquiabierto a quien los mire. ¡Y todo al ritmo de la música!</p>
+          </div>    
+        </div>
+    </div> 
+  </section>
 
     <!--  Pie de página  -->    
     <footer class="footer">
