--- a/Pages/quieroserparte.html
+++ b/Pages/quieroserparte.html
@@ -48,10 +48,7 @@
                     <label for="Apellido">Apellido:</label>
                     <input type="text" name="Apellido" placeholder="Ej:Gonzalez">
                     <br>
-                    <label for="NombreArtistico">Nombre artístico:</label>
-                    <input type="text" name="NombreArtistico" placeholder="Ej:Marcianita">
-                    <br>
-                    <label for="mail">Email:</label>
+                    <label for="mail">E - mail:</label>
                     <input type="email" name="mail" placeholder="Ej:quieroserparte@hotmail.com">
                     <br>
                     <label for="Telefono">Teléfono:</label>
